Fixed table alignment

--- a/app/assets/stylesheets/shared/items_table.scss
+++ b/app/assets/stylesheets/shared/items_table.scss
@@ -103,6 +103,7 @@
   width: 20%;
   float: right;
   margin-bottom: 15px;
+  margin-right: 15%;
 }
 
 .pagination-container {
@@ -115,4 +116,20 @@
   float: right;
   text-align: right;
   color: #999;
+}
+
+.table-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  text-align: center;
+  width: 100%;
+  
+  .node-info {
+      font-size: 18px;
+      line-height: 28px;
+      max-width: 100%;
+      width: 70%;
+  }
 }
